# stmimic

./: Cargo.toml  todo.md
emu/: Cargo.toml
emu/src/: main.rs
stm32parser/: Cargo.toml
stm32parser/src/: lib.rs  main.rs  mp157.rs  svd.rs
