[package]
name = "stm32parser"
version = "0.1.0"
edition = "2021"

[dependencies]
aho-corasick = "1.1.3"
binrw = "0.13.3"
byteorder = "1.5.0"
env_logger = "0.11.3"
log = "0.4.21"
postcard = { version = "1.0.8", features = ["alloc"] }
serde = { version = "1.0.200", features = ["derive"] }
svd-parser = "0.14.5"
